[gd_scene load_steps=4 format=2]

[ext_resource path="res://UIComponents/NumberSelector/Selector.gd" type="Script" id=1]

[sub_resource type="NoiseTexture" id=1]
width = 587
height = 587

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Question" type="Node2D"]
script = ExtResource( 1 )

[node name="Overlay" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.427451 )
position = Vector2( 293, 293 )
texture = SubResource( 1 )

[node name="ButtonMask" type="Button" parent="."]
margin_right = 587.0
margin_bottom = 587.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
button_mask = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
margin_right = 587.0
margin_bottom = 587.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -75.0
margin_right = 150.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 143.0

[node name="Label" type="Label" parent="UI/PanelContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 14.0
text = "Set the new value:"

[node name="HSeparator" type="HSeparator" parent="UI/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 286.0
margin_bottom = 22.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PanelContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 286.0
margin_bottom = 42.0

[node name="Min" type="Label" parent="UI/PanelContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "1"

[node name="HSlider" type="HSlider" parent="UI/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 12.0
margin_right = 274.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 9.0
value = 5.0
tick_count = 9
ticks_on_borders = true

[node name="Max" type="Label" parent="UI/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 278.0
margin_top = 1.0
margin_right = 286.0
margin_bottom = 15.0
text = "9"

[node name="Label2" type="Label" parent="UI/PanelContainer/VBoxContainer"]
visible = false
margin_top = 46.0
margin_right = 286.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "?"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="UI/PanelContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 286.0
margin_bottom = 70.0
align = 1

[node name="Cancel" type="Button" parent="UI/PanelContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 286.0
margin_bottom = 94.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Cancel"

[node name="Commit" type="Button" parent="UI/PanelContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 286.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0.101961, 1, 0, 1 )
text = "Set"
[connection signal="value_changed" from="UI/PanelContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="text_changed" from="UI/PanelContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="UI/PanelContainer/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="UI/PanelContainer/VBoxContainer/Commit" to="." method="_on_Commit_pressed"]
